# kleitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile  header.html
msvs/: Kleitor.filters  Kleitor.sln  Kleitor.vcxproj  Kleitor.vcxproj.filters  Program Icon.rc  vcpkg.json
msvs/Installer/: Installer.vdproj
src/: CMakeLists.txt  main.c
src/engine/: CMakeLists.txt  audio.c  audio.h  engine.c  engine.h  game.c  game.h  graphics.c  graphics.h  input.c  input.h
src/engine/platform/: audio.h  engine.h  game.h  glfw_input.c  graphics.h  input.h  openal_audio.c  opengl_graphics.c  pc_engine.c
src/engine/private/: audio.h  engine.h  game.h  graphics.h  input.h
src/libraries/: cglm_no_io.h  minimp3.c  minimp3.h  minimp3_ex.h  stb_image.c  stb_image.h  stb_image_resize.c  stb_truetype.c  stb_vorbis.c  stb_vorbis.h
src/runtime/: asset.c  asset.h  common.c  common.h  error.c  error.h  runtime.c  runtime.h  stream.c  stream.h  thread.c  thread.h  time.c  time.h
src/runtime/platform/: asset.h  common.h  error.h  linux_error.c  linux_thread.c  linux_time.c  pc_asset.c  stream.h  thread.h  time.h  win32_error.c  win32_thread.c  win32_time.c
src/runtime/private/: asset.h  common.h  error.h  stream.h  thread.h  time.h
src/sonic/: CMakeLists.txt  load_state.c  play_state.c  sonic_game.c  sonic_game.h  title_state.c
